装修管理的筛选重置的条件添加,设计缺陷完善,重置逻辑完善

--- a/OpticalValleyUnite/Classes/UI/DecorationAdmin/ViewController/YQDecorationScreenVC.xib
+++ b/OpticalValleyUnite/Classes/UI/DecorationAdmin/ViewController/YQDecorationScreenVC.xib
@@ -136,7 +136,8 @@
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5j5-GD-9x2">
                     <rect key="frame" x="0.0" y="617" width="187.5" height="50"/>
-                    <state key="normal" title="取消">
+                    <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                    <state key="normal" title="重置">
                         <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <connections>
