--- a/OpticalValleyUnite/Classes/UI/VideoPatrol/ViewController/YQVideoMonitorAndPatrol.storyboard
+++ b/OpticalValleyUnite/Classes/UI/VideoPatrol/ViewController/YQVideoMonitorAndPatrol.storyboard
@@ -30,7 +30,7 @@
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <state key="selected">
-                                            <color key="titleColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
                                             <action selector="videoButtonClick:" destination="ZR0-hQ-5PL" eventType="touchUpInside" id="atY-ci-0kQ"/>
@@ -42,7 +42,7 @@
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <state key="selected">
-                                            <color key="titleColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
                                             <action selector="patrolButtonClick:" destination="ZR0-hQ-5PL" eventType="touchUpInside" id="ft9-9h-IGY"/>
