--- a/OpticalValleyUnite/Classes/UI/ReportForm/ViewController/YQWorkPlanVC.xib
+++ b/OpticalValleyUnite/Classes/UI/ReportForm/ViewController/YQWorkPlanVC.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="YQWorkPlanVC" customModule="OpticalValleyUnite" customModuleProvider="target">
             <connections>
+                <outlet property="bottomView" destination="FzN-aJ-lGJ" id="SWJ-h5-xZg"/>
                 <outlet property="tableView" destination="MYr-kt-DUV" id="9Au-Rr-53s"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -65,24 +66,35 @@
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MYr-kt-DUV">
-                    <rect key="frame" x="0.0" y="64" width="375" height="558"/>
+                    <rect key="frame" x="0.0" y="64" width="375" height="498"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="dvl-8O-aoP"/>
                         <outlet property="delegate" destination="-1" id="I7j-IF-KLG"/>
                     </connections>
                 </tableView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FzN-aJ-lGJ">
+                    <rect key="frame" x="0.0" y="562" width="375" height="60"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="8Dm-Gc-An4"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="MYr-kt-DUV" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="Bdl-FV-VGj"/>
                 <constraint firstAttribute="bottom" secondItem="QzM-iv-792" secondAttribute="bottom" id="D7c-JY-wgy"/>
+                <constraint firstAttribute="trailing" secondItem="FzN-aJ-lGJ" secondAttribute="trailing" id="KZf-JY-QtQ"/>
+                <constraint firstItem="QzM-iv-792" firstAttribute="top" secondItem="FzN-aJ-lGJ" secondAttribute="bottom" id="Nco-Un-Yvx"/>
                 <constraint firstItem="QzM-iv-792" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Ocv-ZZ-tHt"/>
                 <constraint firstItem="MYr-kt-DUV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Yco-jX-aLp"/>
-                <constraint firstItem="QzM-iv-792" firstAttribute="top" secondItem="MYr-kt-DUV" secondAttribute="bottom" id="adv-tf-u1p"/>
+                <constraint firstItem="FzN-aJ-lGJ" firstAttribute="top" secondItem="MYr-kt-DUV" secondAttribute="bottom" id="haK-fk-Ojk"/>
+                <constraint firstItem="FzN-aJ-lGJ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="j3D-I5-vUR"/>
                 <constraint firstAttribute="trailing" secondItem="QzM-iv-792" secondAttribute="trailing" id="oOw-W6-2gz"/>
                 <constraint firstAttribute="trailing" secondItem="MYr-kt-DUV" secondAttribute="trailing" id="uN7-nQ-mBO"/>
             </constraints>
+            <point key="canvasLocation" x="24.5" y="52.5"/>
         </view>
     </objects>
 </document>
