--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/View/YQFalsePositive.xib
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/View/YQFalsePositive.xib
@@ -48,7 +48,7 @@
                     </state>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="weP-KY-KeG" customClass="SJAddView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="224" width="375" height="100"/>
+                    <rect key="frame" x="10" y="224" width="355" height="100"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="bCs-Lo-VTx"/>
@@ -67,7 +67,7 @@
                     </userDefinedRuntimeAttributes>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LYL-nJ-cgt">
-                    <rect key="frame" x="115" y="132.5" width="255" height="30"/>
+                    <rect key="frame" x="110" y="132.5" width="260" height="30"/>
                     <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -112,14 +112,14 @@
                 <constraint firstItem="EIF-9M-zfZ" firstAttribute="top" secondItem="7cQ-dS-IB8" secondAttribute="top" constant="65" id="Pcf-gk-C9a"/>
                 <constraint firstItem="NMs-Ff-9kQ" firstAttribute="centerY" secondItem="EIF-9M-zfZ" secondAttribute="centerY" id="XVL-Uq-1BH"/>
                 <constraint firstItem="w6h-lN-nfc" firstAttribute="centerY" secondItem="EIF-9M-zfZ" secondAttribute="centerY" id="b1w-91-8sf"/>
-                <constraint firstAttribute="trailing" secondItem="weP-KY-KeG" secondAttribute="trailing" id="eNa-8o-RP5"/>
+                <constraint firstAttribute="trailing" secondItem="weP-KY-KeG" secondAttribute="trailing" constant="10" id="eNa-8o-RP5"/>
                 <constraint firstItem="NMs-Ff-9kQ" firstAttribute="leading" secondItem="w6h-lN-nfc" secondAttribute="trailing" constant="5" id="gtH-jK-Jwn"/>
                 <constraint firstItem="mzg-GI-nQC" firstAttribute="centerX" secondItem="7cQ-dS-IB8" secondAttribute="centerX" id="h9t-87-FZj"/>
-                <constraint firstItem="weP-KY-KeG" firstAttribute="leading" secondItem="7cQ-dS-IB8" secondAttribute="leading" id="ioG-2c-8in"/>
+                <constraint firstItem="weP-KY-KeG" firstAttribute="leading" secondItem="7cQ-dS-IB8" secondAttribute="leading" constant="10" id="ioG-2c-8in"/>
                 <constraint firstAttribute="trailing" secondItem="LYL-nJ-cgt" secondAttribute="trailing" constant="5" id="kJ5-Mt-WGW"/>
                 <constraint firstItem="Pkp-rJ-HWx" firstAttribute="top" secondItem="EIF-9M-zfZ" secondAttribute="bottom" constant="40" id="nc2-Lz-z8Y"/>
                 <constraint firstItem="LYL-nJ-cgt" firstAttribute="centerY" secondItem="Pkp-rJ-HWx" secondAttribute="centerY" id="ubd-Jv-eQk"/>
-                <constraint firstItem="LYL-nJ-cgt" firstAttribute="leading" secondItem="Pkp-rJ-HWx" secondAttribute="trailing" constant="15" id="vRJ-6C-K35"/>
+                <constraint firstItem="LYL-nJ-cgt" firstAttribute="leading" secondItem="Pkp-rJ-HWx" secondAttribute="trailing" constant="10" id="vRJ-6C-K35"/>
                 <constraint firstItem="weP-KY-KeG" firstAttribute="top" secondItem="yOz-Bd-JxC" secondAttribute="bottom" constant="10" id="yJR-Om-Ktw"/>
                 <constraint firstItem="mzg-GI-nQC" firstAttribute="top" secondItem="7cQ-dS-IB8" secondAttribute="top" constant="20" id="ynj-pk-aVD"/>
             </constraints>
@@ -128,7 +128,7 @@
                 <outlet property="proofPictureAddView" destination="weP-KY-KeG" id="Cd2-5g-FMI"/>
                 <outlet property="reasonTextField" destination="LYL-nJ-cgt" id="DpB-YO-dT6"/>
             </connections>
-            <point key="canvasLocation" x="-158.5" y="49.5"/>
+            <point key="canvasLocation" x="1" y="30"/>
         </view>
     </objects>
     <resources>
